--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>CPS630 Weather App</title>
+    <title>Weather Reporting Application</title>
       <link href="assets/style.css" rel="stylesheet">
   </head>
   <body>
       <nav class="navbar navbar-default">
       <div class="container-fluid">
       <div class="page-header">
-        <h2>Weather Application</h2>
+        <h2>Global Weather Reporting</h2>
       </div>
       <br>
       <div class="row">
