--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>CPS630 Weather App</title>
+    <title>Weather Application</title>
       <link href="assets/style.css" rel="stylesheet">
   </head>
   <body>
